# sightreading_ai

./: .gitignore  LICENSE  README.md  constants.py  environment.yml  main.py  pyproject.toml  requirements.txt  sightreading_ai.code-workspace  to_dos.txt
.github/workflows/: publish.yml
constants/: __init__.py  model.py
data/: converter.py  pipeline_stage.py
data/mxl_in/: C._Schfer_A._Sartorio_Op._45_-_Volume_I_-_Sight_Reading_Exercises_Piano.mxl
data_pipeline/: conversion_functions.py  converter.py  file.py  log.py  pipeline.py  pipeline_stage.py
data_pipeline/scipts/: conversion_functions.py  converter.py  file.py  log.py  pipeline.py
data_pipeline/temp/: C._Schfer_A._Sartorio_Op._45_-_Volume_2_-_Melodious_Exercises_Piano.musicxml  C._Schfer_A._Sartorio_Op._45_-_Volume_I_-_Sight_Reading_Exercises_Piano.musicxml  Sight_Reading_Book.musicxml  Sight_Reading_Exercise_for_Piano_Preparation_8.musicxml
data_pipeline_scripts/: conversion_func_infrastructure.py  conversion_functions.py  converter.py  data_pipeline_constants.py  enhance_resolution.py  pipeline.py  tokenisation.py
data_pipeline_scripts/tokenisation/: metadata_extraction.py
model/: dataloader.py  model.py  model_constants.py
model/output/: generated.tokens.json
src/constants/: __init__.py
src/data_pipeline_scripts/: conversion_functions.py  converter.py  data_pipeline_constants.py
src/model/: model.py
tests/: test_functional.py  test_imports.py
tokenisation/: __init__.py  metadata_extraction.py
tokeniser/: tokeniser.py  tokeniser_constants.py  tokenizer.json
(+18 files in other folders)
